# cox

./: .env.example  .gitignore  .replit  agent.py  build.sh  pyproject.toml  replit.md  requirements.txt  server.py
.kiro/hooks/: sandbox-deploy-agent.kiro.hook
copilotkit-frontend-creator/: index.html  package-lock.json  package.json  tailwind.config.js  test-integration.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
copilotkit-frontend-creator/src/: App.tsx  index.css  main.tsx
copilotkit-frontend-creator/src/adapters/: code-analyzer.ts  connection-validator.ts  docs-fetcher.ts  llm-transformer.ts  runtime-adapter.ts  sandbox-deployer.ts
copilotkit-frontend-creator/src/components/codegen/: CodeTransformerView.tsx
copilotkit-frontend-creator/src/components/connections/: AgentHub.tsx  ConnectionForm.tsx  (+1 more)
copilotkit-frontend-creator/src/config/: example-connections.json  example-error-contract.json  mock-preview-data.ts  workspace-templates.ts
copilotkit-frontend-creator/src/hooks/: useAgentChat.ts  useAgentState.ts  useCopilotAgentEvents.ts  useLocalAgent.ts  useMockPreview.ts
copilotkit-frontend-creator/src/registry/: block-registry.ts
copilotkit-frontend-creator/src/store/: code-analysis-store.ts  connection-store.ts  deploy-store.ts  framework-store.ts  frontend-store.ts  llm-store.ts  theme-store.ts  toast-store.ts  workspace-store.ts
copilotkit-frontend-creator/src/types/: blocks.ts  connections.ts  workspace.ts
copilotkit-frontend-creator/src/utils/: config-validator.ts  project-generator.ts  prompt-generator.ts  share-url.ts
(+43 files in other folders)
